# cadqueryhelper

./: .gitignore  LICENSE  PACKAGE_README.md  README.md  changes.md  example_runner.py  pyproject.toml
documentation/: documentation.md  grid.md  hinge.md  irregularGrid.md  series.md  shapes.md  wave.md
example/: exampleGrid.py  helper_plate.py  hexagonGrid.py  hinge.py  hinge_invert.py  hinge_larger_tab.py  hinge_render.py  irregularGrid.py  irregularGrid_hardCoded.py  proj.py  series.py  seriesOperation.py  starGrid.py
example/grid/: cell_single.py  cell_stretch_points.py  exampleGrid.py  grid_arc_points.py  grid_arc_points_coords.py  grid_arc_points_random.py  grid_cell_basic.py  grid_cell_basic_arc.py  grid_cell_basic_arc_random.py  grid_cell_basic_mod.py  grid_cell_basic_random.py  grid_cell_random.py  grid_points.py  grid_points_coords.py  grid_points_mod.py  grid_points_random.py  grid_points_random_coords.py  hexagonGrid.py  irregularGrid.py  irregularGrid_hardCoded.py  join_cells_interlock.py  points_randomize.py  randomized_rotation_grid.py  rotate_grid.py  scheme_grid.py  series.py  seriesOperation.py  starGrid.py
example/hinge/: hinge.py  hinge_invert.py  hinge_larger_tab.py  hinge_render.py  simple_door.py  simple_frame.py  simple_hinge.py  simple_pivot.py
gltf/: helper_ex.gltf
stl/: grid.stl  grid_arc_points.stl  grid_arc_points_random.stl  grid_cell_basic.stl  grid_cell_basic_arc.stl  grid_cell_basic_arc_random.stl  grid_cell_basic_mod.stl  grid_cell_basic_random.stl  grid_cell_random.stl  grid_cell_single.stl  grid_hexgrid.stl  grid_irregular.stl  grid_irregular_2.stl  grid_irregular_3_city.stl  grid_irregular_4_sky_scrapers.stl  grid_irregular_hardcoded.stl  grid_joined_cells_interlock.stl  grid_points.stl  grid_points_mod.stl  grid_points_random.stl  grid_points_randomize.stl  grid_randomized_rotation.stl  grid_rotate.stl  grid_stargrid.stl  hinge.stl  hinge_invert.stl  hinge_larger_tab.stl  hinge_render.stl  hinge_simple_door.stl  hinge_simple_frame.stl  hinge_simple_hinge.stl  hinge_simple_pivot.stl  series.stl  seriesOperation.stl  shape_arch_pointed.stl  shape_arch_round.stl  shape_arrow.stl  shape_backdrop.stl  shape_chevron.stl  shape_chevron_alt.stl  (+43 more)
(+153 files in other folders)
