[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cadqueryhelper"
version = "2.1.0"
authors = [
  { name="James Adams", email="inklink28@gmail.com" },
]
description = "CADQuery helper library"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
"cadquery==2.7.0"
]

[project.urls]
"Homepage" = "https://github.com/medicationforall/cadqueryhelper"
"Bug Tracker" = "https://github.com/medicationforall/cadqueryhelper/issues"
