[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "2.2.0"
name = "cadqueryhelper"
description = "CADQuery helper library"

authors = [
  { name="James Adams", email="inklink28@gmail.com" },
]

readme = "PACKAGE_README.md"
license = "Apache-2.0"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

requires-python = ">=3.10"
dependencies = [
"cadquery==2.7.0"
]

[project.urls]
"Homepage" = "https://github.com/medicationforall/cadqueryhelper"
"Bug Tracker" = "https://github.com/medicationforall/cadqueryhelper/issues"
